Fix FCFS scheduler and add the double instead of unsigned long long

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 MainWindow{
-/*     background-color : #252526;
-     color : #D4D4D4;*/
+    background-color : #252526;
+    color : #D4D4D4;
 }
 Editor{
     background-color : #1E1E1E;
